--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,21 +9,17 @@
       margin: 0;
       padding: 20px;
       font-family: system-ui, -apple-system, sans-serif;
-      background: #f5f5f5;
+      background: #e3f2fd;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
     .header {
-      background: white;
-      padding: 20px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      padding: 12px 20px;
       margin-bottom: 20px;
       border-radius: 8px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    .header h1 {
-      margin: 0 0 10px 0;
-      font-size: 24px;
+      box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
     }
     .components-grid {
       display: grid;
@@ -33,9 +29,11 @@
     }
     .component-card {
       background: white;
-      padding: 15px;
+      padding: 0;
       border-radius: 8px;
+      border: 1px solid #000;
       box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      overflow: hidden;
     }
     .component-card:hover {
       box-shadow: 0 2px 6px rgba(0,0,0,0.15);
@@ -226,11 +224,10 @@
 <body>
   <div class="header">
     <div style="display: flex; justify-content: space-between; align-items: center;">
-      <div>
-        <h1>📋 ComponentCanvas</h1>
-        <p>Your captured components will appear here</p>
-      </div>
-      <button id="refresh-all-btn" style="padding: 12px 24px; background: #007bff; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 16px; font-weight: 500;">
+      <h1 style="margin: 0; font-size: 22px; font-weight: 700; color: white;">
+        📋 ComponentCanvas | <span id="board-name" style="cursor: pointer; padding: 2px 6px; border-radius: 4px;" title="Click to edit board name">My Dashboard</span>
+      </h1>
+      <button id="refresh-all-btn" style="padding: 8px 16px; background: white; color: #667eea; border: none; border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: 600; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         🔄 Refresh All
       </button>
     </div>
