UI polish: Canvas→Board, Components→Spots, hide domain text on extension pages

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -302,8 +302,8 @@
   
   <div id="components-container">
     <div class="empty-state">
-      <h2>No components yet</h2>
-      <p>Use the extension popup to capture components from any website</p>
+      <h2>No spots yet</h2>
+      <p>Use the extension popup to save spots from any website
     </div>
   </div>
 
