Fix: Force 25px image sizing with !important to override inline styles (Product Hunt fix)

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -70,8 +70,8 @@
     }
     /* Image scaling - prevent oversized images */
     .component-content img {
-      max-width: 25px;
-      max-height: 25px;
+      max-width: 25px !important;
+      max-height: 25px !important;
       object-fit: contain;
       display: inline-block;
       vertical-align: middle;
