Fix: Add video element to 25px media sizing rule (TruGen AI animation fix)

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -68,8 +68,9 @@
     .component-content button {
       cursor: default !important;
     }
-    /* Image scaling - prevent oversized images */
-    .component-content img {
+    /* Image and video scaling - prevent oversized media */
+    .component-content img,
+    .component-content video {
       max-width: 25px !important;
       max-height: 25px !important;
       object-fit: contain;
