Fix: Remove duplicate team names on responsive sites (Premier League pattern)

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -103,6 +103,11 @@
       position: static !important;
     }
     
+    /* 🏆 PREMIER LEAGUE FIX: Hide short team names (they duplicate the full names) */
+    .component-content .match-card__team-name--short {
+      display: none !important;
+    }
+    
     /* Reduce spacing between list items */
     .component-content li {
       margin: 4px 0 !important;
